feat: Adiciona suporte para Excel/CSV e melhora categorização de FAQs com palavras-chave
- Adiciona suporte para formatos Excel (.xlsx, .xls) e CSV (.csv) no document_extractor
- Atualiza prompt de FAQ para incluir palavras-chave obrigatórias
- Melhora sistema de categorização baseado em palavras-chave (tags)
- Adiciona coluna de palavras-chave no Excel gerado
- Implementa função extract_category_from_keywords com sistema de pontuação
- Adiciona xlrd ao requirements.txt para suporte a arquivos .xls

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # API Keys
-API_KEY=sua_chave_gemini_aqui
-LLM_MODEL=gemini-1.5-flash
-YOUTUBE_API_KEY=sua_chave_youtube_aqui
+API_KEY=AIzaSyC_nEUq0ecT91zGVPN_pQB3crR1_KiVxlM
+LLM_MODEL=gemini-1.5-flash-002
+YOUTUBE_API_KEY=AIzaSyDohKqaSwtngtFC_b8GzB5oNqWrs-Nr09Y
 
 # Configuração de Proxies
 # Ative para evitar bloqueio de IP do YouTube
