--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,15 @@ google-auth==2.43.0
 google-auth-httplib2==0.2.1
 google-generativeai==0.8.5
 googleapis-common-protos==1.72.0
+isodate==0.6.1
 python-dotenv==1.1.0
 pytube==15.0.0
 requests==2.31.0
 termcolor==3.1.0
 youtube-transcript-api==1.2.3
+beautifulsoup4==4.12.2
+lxml==4.9.3
+PyPDF2==3.0.1
+python-docx==1.1.0
+openpyxl==3.1.2
+xlrd==2.0.1
