--- a/env.example
+++ b/env.example
@@ -6,10 +6,10 @@ API_KEY=AIzaSyC_nEUq0ecT91zGVPN_pQB3crR1_KiVxlM
 # Obtenha em: https://console.cloud.google.com/apis/credentials
 YOUTUBE_API_KEY=AIzaSyDohKqaSwtngtFC_b8GzB5oNqWrs-Nr09Y
 
-# Modelo do LLM (padrão: gemini-1.5-flash-002)
-# Opções válidas: gemini-1.5-flash-002, gemini-1.5-pro, gemini-1.5-pro-002
-# NÃO use: gemini-1.5-flash (deprecated), gemini-2.5-flash (não existe)
-LLM_MODEL=gemini-1.5-flash-002
+# Modelo do LLM (padrão: gemini-2.5-flash)
+# Opções válidas: gemini-3-pro, gemini-2.5-pro, gemini-2.5-flash, gemini-2.5-flash-lite
+# NÃO use versões antigas (1.5)
+LLM_MODEL=gemini-2.5-flash
 
 # Usar proxies rotativos (true/false)
 # Ative para evitar bloqueio de IP pelo YouTube
