--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,33 @@ python-dotenv==1.1.0
 pytube==15.0.0
 requests==2.31.0
 termcolor==3.1.0
-youtube-transcript-api==1.2.3
+youtube-transcript-api>=1.0.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
 PyPDF2==3.0.1
 python-docx==1.1.0
 openpyxl==3.1.2
 xlrd==2.0.1
+
+# Frontend
+streamlit==1.28.0
+plotly==5.17.0
+
+# Backend API
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+websockets==12.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+
+# Database
+sqlalchemy==2.0.23
+alembic==1.12.1
+
+# Queue System
+celery==5.3.4
+redis==5.0.1
+
+# Utilities
+python-multipart==0.0.6
+aiofiles==23.2.1
