att do README.md

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # API Keys
-API_KEY=AIzaSyC_nEUq0ecT91zGVPN_pQB3crR1_KiVxlM
-LLM_MODEL=gemini-1.5-flash-002
+API_KEY=AIzaSyAqCP_I003qtkgUwLjVlnd3dYhoOMbkytw
+LLM_MODEL=gemini-3-pro
 YOUTUBE_API_KEY=AIzaSyDohKqaSwtngtFC_b8GzB5oNqWrs-Nr09Y
 
 # Configuração de Proxies
